--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "prestart": "babel-node tools/startMessage",
     "start": "npm-run-all --parallel open:src lint:watch test:watch",
-    "open:src":"babel-node tools/srcServer",
+    "open:src": "babel-node tools/srcServer",
     "lint": "esw webpack.config.* src tools",
-    "lint:watch" : "npm run lint -- --watch",
-    "test": "mocha tools/testSetup \"src/test/**/*.test.js\"",
+    "lint:watch": "npm run lint -- --watch",
+    "test": "mocha --reporter spec tools/testSetup \"src/**/*.test.js\"",
     "test:watch": "npm test -- --watch"
   },
   "author": "Nabil DADEN",
@@ -21,6 +21,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
