--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter spec tools/testSetup \"src/**/*.test.js\"",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "rimraf ./dist",
+    "prebuild": "npm run clean-dist && npm run test && npm run lint",
+    "build": "babel-node tools/build",
+    "postbuild": "babel-node tools/distServer"
   },
   "author": "Nabil DADEN",
   "license": "MIT",
@@ -17,6 +22,7 @@
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.0",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
@@ -36,9 +42,11 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.24.0",
+    "browser-sync": "^2.18.8",
     "cheerio": "^0.22.0",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
+    "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "enzyme": "^2.7.1",
@@ -51,12 +59,14 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nock": "^9.0.9",
     "npm-run-all": "^4.0.2",
     "open": "^0.0.5",
     "react-addons-test-utils": "^15.4.2",
+    "react-test-renderer": "^15.5.4",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "^1.2.2",
     "rimraf": "^2.6.1",
